test/corpus/attributes.txt
================================================================================
box width and height
================================================================================
.PS
box wid 2.0 ht 1
box width 2.0 height 1
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute
        (name)
        (expr
          (number)))
      (attribute
        (name)
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (name)
        (expr
          (number)))
      (attribute
        (name)
        (expr
          (number)))))
  (element
    (command_line)))

================================================================================
circle diameter
================================================================================
.PS
circle diam 1
circle diameter 0.5
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute
        (name)
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (name)
        (expr
          (number)))))
  (element
    (command_line)))

================================================================================
arc radius
================================================================================
.PS
arc rad 1
arc radius 0.5
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute
        (name)
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (name)
        (expr
          (number)))))
  (element
    (command_line)))

================================================================================
position using at modifier
================================================================================
.PS
box at (0,0)
box at last box.se
box at last box.se + (1,0)
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute
        (name)
        (position
          (position_not_place
            (expr_pair
              (expr_pair
                (expr
                  (number))
                (expr
                  (number)))))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (name)
        (position
          (place
            (nth_primitive
              (object_type))
            (corner))))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (name)
        (position
          (position_not_place
            (position
              (place
                (nth_primitive
                  (object_type))
            (corner)))
        (expr_pair
          (expr_pair
            (expr
              (number))
            (expr
              (number)))))))))
  (element
    (command_line)))

================================================================================
position using to modifier
================================================================================
.PS
box "from"
move 0.75;
ellipse "to"
arc cw from 1/3 of the way \
  between last box .n and last box .ne to last ellipse .n;
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (name))
      (attribute
        (name)
        (position
          (position_not_place
            (expr
              (expr
                (expr
                  (number)))
                (expr
                  (number)))
            (position
              (place
                (nth_primitive
                  (object_type))
              (corner)))
            (position
              (place
                (nth_primitive
                  (object_type))
                (corner))))))
      (attribute
        (name)
        (position
          (place
            (nth_primitive
              (object_type))
            (corner))))))
  (element
    (command_line)))

================================================================================
position using with modifier
================================================================================
.PS
box ht 0.5; box ht 0.75 with .sw at last box .se
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute
        (name)
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (name)
        (expr
          (number)))
      (attribute
        (name)
        (path
          (relative_path
            (corner))))
      (attribute
        (name)
        (position
          (place
            (nth_primitive
              (object_type))
            (corner))))))
  (element
    (command_line)))
