test/corpus/basic.txt
================================================================================
figure 3-1
================================================================================
.PS
ellipse "document";
arrow;
box width 0.6 "\fIpic\/\fP(1)"
arrow;
box width 1.1 "\fIgtbl\/\fP(1) or \fIgeqn\/\fP(1)" "(optional)" dashed;
arrow;
box width 0.6 "\fIgtroff\/\fP(1)";
arrow;
ellipse "PostScript"
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (text))))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (text)
        (text))
      (attribute)))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (expr
          (number)))
      (attribute
        (text))))
  (element
    (primitive))
  (element
    (primitive)
      (attribute_list
        (attribute
          (text)))))

================================================================================
figure 3-2
================================================================================
.PS
box "box";
move;
line "line" "";
move;
arrow "arrow" "";
move;
circle "circle";
move;
ellipse "ellipse";
move;
arc; down; move; "arc"
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text)
        (text))))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text)
        (text))))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (primitive))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (primitive))
  (element
    (primitive))
  (element
    (direction))
  (element
    (primitive))
  (element
    (primitive
      (text))))

================================================================================
figure 3-4
================================================================================
.PS
line "1";
line "1" "2";
line "1" "2" "3";
line "1" "2" "3" "4";
line "1" "2" "3" "4" "5";
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (primitive)
    (attribute_list
      (attribute
        (text))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text)
        (text))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text)
        (text)
        (text))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text)
        (text)
        (text)
        (text))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (text)
        (text)
        (text)
        (text)
        (text)))))
