test/corpus/elements.txt
================================================================================
empty picture
================================================================================
.PS
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (command_line)))

================================================================================
empty picture with comment
================================================================================
.PS
# empty
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (comment)
  (element
    (command_line)))

================================================================================
empty picture with comments and empty lines
================================================================================
.PS
# empty

# empty
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (comment)
  (comment)
  (element
    (command_line)))

================================================================================
elements with newline
================================================================================
.PS
box
arrow
box
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive))
  (element
    (primitive))
  (element
    (primitive))
  (element
    (command_line)))

================================================================================
elements with semicolon
================================================================================
.PS
box; arrow; box
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive))
  (element
    (primitive))
  (element
    (primitive))
  (element
    (command_line)))

================================================================================
element with backslash
================================================================================
.PS
box solid \
  dashed
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute)
      (attribute)))
  (element
    (command_line)))

================================================================================
primitive
================================================================================
.PS
box
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive))
  (element
    (command_line)))

================================================================================
primitive with placename
================================================================================
.PS
Box: box
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (label)
    (element
      (primitive)))
  (element
    (command_line)))

================================================================================
lines and splines
================================================================================
.PS
line dashed right 1 then down .5 left 1 then right 1
spline from start of last line right 1 then down .5 left 1 then right 1
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (primitive)
    (attribute_list
      (attribute)
      (attribute
        (expr
          (number)))
      (attribute)
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute)
      (attribute
        (expr
          (number)))))
  (element
    (primitive)
    (attribute_list
      (attribute
        (position
          (place
            (corner)
            (nth_primitive
              (object_type)))))
      (attribute
        (expr
          (number)))
      (attribute)
      (attribute
        (expr
          (number)))
      (attribute
        (expr
          (number)))
      (attribute)
      (attribute
        (expr
          (number)))))
  (element
    (command_line)))
